-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
If the LoadableDescriptors attribute contains signature of primitive types, the VM crashes at class link time with the following message:
#
# Internal Error (/valhalla/open/src/hotspot/share/runtime/signature.cpp:438), pid=362279, tid=362325
# assert(has_envelope(signature)) failed: precondition
#
# JRE version: Java(TM) SE Runtime Environment (23.0) (fastdebug build 23-lworld5ea-2024-07-31-1324347.fred...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-lworld5ea-2024-07-31-1324347.fred..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x17001dc] Signature::strip_envelope(Symbol const*)+0x4c
#
The processing of the LoadableDescriptors at link time must filter out descriptors not representing a class type (without an envelope in HotSpot semantic). No exception is thrown if such non loadable type is found in the attribute because those descriptors are allowed by the specification of the attribute in the JVMS: those descripyors must be "valid field descriptors".
#
# Internal Error (/valhalla/open/src/hotspot/share/runtime/signature.cpp:438), pid=362279, tid=362325
# assert(has_envelope(signature)) failed: precondition
#
# JRE version: Java(TM) SE Runtime Environment (23.0) (fastdebug build 23-lworld5ea-2024-07-31-1324347.fred...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-lworld5ea-2024-07-31-1324347.fred..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x17001dc] Signature::strip_envelope(Symbol const*)+0x4c
#
The processing of the LoadableDescriptors at link time must filter out descriptors not representing a class type (without an envelope in HotSpot semantic). No exception is thrown if such non loadable type is found in the attribute because those descriptors are allowed by the specification of the attribute in the JVMS: those descripyors must be "valid field descriptors".
- links to
-
Commit(lworld)
openjdk/valhalla/d14e3757
-
Review(lworld)
openjdk/valhalla/1190