8337585: [lworld] VM crashes if primitive type signatures are present in the LoadableDescriptors attribute

Reviewed-by: coleenp